@startuml
' Set direction for the diagram
left to right direction

title Data Transfer Objects (DTOs)

package "05. DTOs (Data Transfer Objects)" {
    package Products {
        class Brand {
            + int Id
            + string Name
        }
        class Category {
            + int Id
            + string Name
        }
        class Candy {
            + int Id
            + string Name
            + Brand Brand
            + Category Category
            + decimal PriceBeforeTax
        }
        Candy --> Brand
        Candy --> Category
    }

    package Users {
        class UserLoginFormDTO {
            + string Username
            + string Password
        }
        class UserRegisterFormDTO {
            + string Username
            + string Password
            + string Email
        }
        ' Assuming there's an AuthResponseDto returned by auth controller
        class AuthResponseDto {
             + string Token
             + int UserId
             + string Username
             + string Role
         }
    }

    package Orders {
        class PlaceOrderRequestDto {
             + List<OrderItemDto> OrderItems
        }

        class OrderItemDto {
             + int ProductId
             + uint Quantity
        }

        class OrderResponseDto {
             + int Id
             + int UserId
             + DateTime OrderDate
             + string Status
             + List<OrderItemResponseDto> OrderItems
        }

        class OrderItemResponseDto {
             + int Id
             + int ProductId
             + string ProductName
             + uint Quantity
             + decimal UnitPrice
        }
        PlaceOrderRequestDto "*" --> "1" OrderItemDto : contains
        OrderResponseDto "*" --> "1" OrderItemResponseDto : contains
    }
}
@enduml